--- a/app/src/main/res/layout/fragment_scanner_camera.xml
+++ b/app/src/main/res/layout/fragment_scanner_camera.xml
@@ -60,9 +60,9 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="12dp"
-        android:backgroundTint="@color/dark_red"
+        android:backgroundTint="@color/scan_button_idle"
         android:text="@string/btn_scan_idle"
-        android:textColor="@color/white"
+        android:textColor="@color/scan_button_idle_text"
         android:textSize="18sp"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
