--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+
+    <color name="scan_button_active">#FF0000</color>
+    <color name="scan_button_active_text">#FFFFFFFF</color>
+    <color name="scan_button_idle">#8B0000</color>
+    <color name="scan_button_idle_text">#9D5D5D</color>
+
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#2196F3</color>
