dw 20250115 manage item

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -213,6 +213,34 @@
                     android:text="Upload Item CSV"
                     android:visibility="gone" />
 
+                <Button
+                    android:id="@+id/btnDownloadDb"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Download DB"
+                    app:icon="@android:drawable/stat_sys_download"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
+
+                <Button
+                    android:id="@+id/btnClearCollectedData"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="Clear Collected Data"
+                    android:textColor="@android:color/white"
+                    app:backgroundTint="@color/design_default_color_error"
+                    style="@style/Widget.MaterialComponents.Button"/>
+
+                <Button
+                    android:id="@+id/btnClearItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Clear Item"
+                    android:textColor="@color/design_default_color_error"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
+
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
