--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            tools:listitem="@layout/item_item_list" />
+            tools:listitem="@layout/row_item_list_fashion" />
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
