dw 20250116 scanned item history

--- a/app/src/main/res/drawable/bg_rounded_light_grey.xml
+++ b/app/src/main/res/drawable/bg_rounded_light_grey.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <!-- Warna latar belakang (Abu-abu sangat muda) -->
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#E4E4E4" />
 
     <!-- Warna garis tepi (Stroke) - opsional agar lebih tegas -->
     <stroke
