--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="red">#FF0000</color>
     <color name="dark_red">#8B0000</color>
     <color name="grey">#888888</color>
+
+    <color name="ungu">#634E9F</color>
 </resources>
